# policy-as-generative-verifier-a-star-po_project

./: .gitignore  PAG_with_A_star_PO.ipynb  README.md  pyproject.toml  requirements.txt
scripts/: evaluate.py  prepare_training_data.py  run_stage1.py
src/pag_a_star_po/: __init__.py  data_prep.py  helpers.py  trainer.py
